# dbat

./: .env  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.old  CONTRIBUTING.md  ChangeLog.rasputin  DOCKER.md  Dockerfile  README.md  autorun  autorun.pl  autorun.sh  build.zig  build.zig.zon  build2  build3  compile  compile.py  compile.sh  config.plugin-001.toml  config.user.toml  configure  dbat  dbat.code-workspace  dbtool.py  debug_triggers.py  docker-compose.yml  game  getlibs  launcher.py  localhost-key.pem  localhost.pem  makekey.sh  migrate.py  output  portal.py  pyproject.toml  (+9 more)
.zed/: debug.json
apps/circle/: CMakeLists.txt
apps/circle/src/: circle.c
apps/migrate/: CMakeLists.txt
apps/migrate/src/: assemblies.cpp  main.cpp
apps/portal/: CMakeLists.txt
apps/portal/src/: AccountMode.cpp  ChargenMode.cpp  Client.cpp  LoginMode.cpp  PlayMode.cpp  main.cpp
apps/server/: CMakeLists.txt
apps/server/src/: main.c  main.cpp  main.zig  run.cpp
libs/ansi/: CMakeLists.txt
libs/ansi/private/: pch.hpp
libs/ansi/src/: Color.cpp  Text.cpp
libs/api/: CMakeLists.txt
libs/api/include/api/: api.hpp  base.hpp  channel.hpp  endpoints.hpp  game.hpp  server.hpp  websocket.hpp
libs/api/src/: channel.cpp  endpoints.cpp  game.cpp  guards.cpp  server.cpp  websocket.cpp
libs/circle/: CMakeLists.txt
libs/circle/private/: pch.hpp
libs/circle/src/: CircleAnsi.cpp
libs/config/: CMakeLists.txt
libs/config/include/config/: config.hpp
libs/config/src/: config.cpp
libs/db/: CMakeLists.txt  README.md
libs/db/src/: assembly.c  bans.c  boards.cpp  character_utils.c  character_utils.cpp  characters.cpp  characters.zig  characters_api.zig  characters_json.zig  characters_lua.zig  command.c  command.cpp  config.cpp  descriptor.c  dgscripts.c  dgscripts.cpp  dgscripts.zig  dgscripts_json.zig  disabled.c  exits_api.zig  exits_json.zig  extradesc.cpp  extradesc_json.zig  flags.c  flags.cpp  flags.zig  flags_json.zig  guilds.c  guilds.cpp  guilds.zig  guilds_api.zig  guilds_json.zig  guilds_lua.zig  help.c  htree.c  htree.cpp  json_api.zig  lua_api.zig  modifiers_api.zig  object_utils.c  (+32 more)
libs/db/src/consts/: adminflags.c  admlevel.cpp  afflags.c  aligns.c  appearance.c  applies.c  assemblytypes.c  attacks.cpp  colors.c  constates.c  constates.cpp  create.cpp  directions.c  exitflags.c  history.cpp  itemdata.c  magic.cpp  mobflags.c  npc.c  playerflags.c  positions.c  prefflags.c  races.c  roomflags.c  sectortypes.c  senseis.c  sex.c  sizes.cpp  songs.cpp  time.c  triggers.cpp  weapons.c  zoneflags.cpp
libs/dbat/: CMakeLists.txt
libs/dbat/include/: act.movement.h  assedit.h  combat.h  gedit.h  hsedit.h  htree.h  mobact.h  olc.h  players.h  spec_assign.h  structs.h  sysdep.h  utils.h  weather.h
libs/dbat/include/dbat/: API.h  AbstractGridArea.h  AbstractLocation.h  Account.h  Area.h  Character.h  CharacterPrototype.h  CharacterShared.h  CharacterUtils.h  Command.h  Coordinates.h  Create.h  Descriptor.h  Destination.h  DgScript.h  DgScriptPrototype.h  DragonBall.h  Enum.h  Flags.h  Guild.h  Handle.h  HasDgScripts.h  HasEquipment.h  HasExtraDescriptions.h  HasInteractive.h  HasInventory.h  HasLocation.h  HasMisc.h  HasMudStrings.h  HasOrganizationInfo.h  HasPicky.h  HasResetCommands.h  HasVariables.h  HasZone.h  Help.h  ID.h  Location.h  Log.h  Object.h  ObjectPrototype.h  (+90 more)
libs/dbat/private/: pch.hpp
libs/dbat/src/: API.cpp  AbstractGridArea.cpp  AbstractLocation.cpp  Account.cpp  Area.cpp  Character.cpp  CharacterPrototype.cpp  Command.cpp  Coordinates.cpp  Descriptor.cpp  Destination.cpp  DgScript.cpp  DgScriptPrototype.cpp  DragonBall.cpp  GridTemplate.cpp  HasDgScripts.cpp  HasExtraDescriptions.cpp  HasInteractive.cpp  HasInventory.cpp  HasLocation.cpp  HasMudStrings.cpp  HasVariables.cpp  Help.cpp  ID.cpp  Location.cpp  Log.cpp  Object.cpp  ObjectPrototype.cpp  ObjectUtils.cpp  Parse.cpp  ResetCommand.cpp  Room.cpp  Search.cpp  Shape.cpp  ShapeBase.cpp  Shop.cpp  Social.cpp  Startup.cpp  Structure.cpp  ThingPrototype.cpp  (+180 more)
libs/dotenv/: CMakeLists.txt
libs/dotenv/include/dotenv/: dotenv.hpp
libs/dotenv/src/: dotenv.cpp
libs/ext/: CMakeLists.txt  db.pxd  dbat_ext.pyx  saveload.pxd  structs.pxd
libs/game/: CMakeLists.txt
libs/game/private/: pch.hpp
libs/game/src/: API.cpp  AbstractGridArea.cpp  AbstractLocation.cpp  Account.cpp  Area.cpp  Assembly.cpp  Character.cpp  CharacterPrototype.cpp  CharacterShared.cpp  Command.cpp  Coordinates.cpp  Database.cpp  DescriptionEditor.cpp  Descriptor.cpp  DescriptorMode.cpp  Destination.cpp  DgScript.cpp  DgScriptPrototype.cpp  Dirty.cpp  DragonBall.cpp  EditorMode.cpp  GridTemplate.cpp  HasDgScripts.cpp  HasEquipment.cpp  HasExtraDescriptions.cpp  HasInteractive.cpp  HasInventory.cpp  HasLocation.cpp  HasMisc.cpp  HasMudStrings.cpp  HasResetCommands.cpp  HasVariables.cpp  HasZone.cpp  Help.cpp  ID.cpp  Location.cpp  Object.cpp  ObjectPrototype.cpp  ObjectUtils.cpp  Parse.cpp  (+241 more)
libs/jwt/: CMakeLists.txt
libs/jwt/include/jwt/: jwt.hpp
libs/jwt/src/: jwt.cpp
libs/link/: CMakeLists.txt
libs/link/src/: channel.cpp  endpoints.cpp  game.cpp  guards.cpp  server.cpp  websocket.cpp
libs/log/: CMakeLists.txt
libs/log/private/: pch.hpp
libs/log/src/: Log.cpp
libs/logging/: CMakeLists.txt
libs/logging/include/logging/: Log.hpp
libs/logging/src/: Log.cpp
libs/mud/: CMakeLists.txt
libs/mud/private/: pch.hpp
libs/mud/src/: ClientDataSave.cpp  Command.cpp  mud.cpp
libs/net/: CMakeLists.txt
libs/net/include/net/: net.hpp
libs/net/private/: pch.hpp
libs/net/src/: net.cpp
libs/netbind/: CMakeLists.txt
libs/netbind/include/netbind/: net.hpp  server.hpp
libs/netbind/private/: pch.hpp
libs/netbind/src/: net.cpp
libs/serde/: CMakeLists.txt
libs/serde/private/: pch.hpp
libs/serde/src/: Startup.cpp  json.cpp  saveload.cpp
libs/util/: CMakeLists.txt
libs/util/private/: pch.hpp
libs/util/src/: Parse.cpp  util.cpp
libs/valid/: CMakeLists.txt
libs/valid/private/: pch.hpp
libs/valid/src/: valid.cpp
libs/web/: CMakeLists.txt
libs/web/src/: web.cpp
(+3148 files in other folders)
